# poc_fb_login

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
fb_graph/: apps.py  constants.py  handlers.py
fb_graph/templates/: demo.html
project/: settings.py  urls.py  views.py
