[project]
name = "poc-instagram"
version = "0.1.0"
description = "poc instagram login"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-allauth[socialaccount]>=65.2.0",
    "django-extensions>=3.2.3",
    "django>=5.1.3",
    "python-dotenv>=1.0.1",
    "ipython>=8.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]
